--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.8"
+    "@hapi/hapi": "^21.3.8",
+    "nanoid": "^3.3.7"
   }
 }
